# DirectorSync

./: .gitignore  BUILD_EXE.md  CHANGELOG.md  DESIGN.md  HOWTO_add_importer.md  MIGRATION.md  README.md  app.py  raw_links.txt
DirectorSyncV3/: .gitignore  pyproject.toml  requirements_dev.txt
DirectorSyncV3/docs/: DirectorSync v3 — Functional Specification.md  director_sync_v_3_developer_conventions_en.md  director_sync_v_3_docs_readme_en.md  director_sync_v_3_importer_acceptance_checklist_en.md  director_sync_v_3_profile_dsl_specification_en.md  director_sync_v_3_profile_linter_specification_en.md  director_sync_v_3_test_plan_en.md
DirectorSyncV3/docs/todo/: next_steps.md
DirectorSyncV3/src/directorsync_v3/: __init__.py  cli.py
DirectorSyncV3/src/directorsync_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DirectorSyncV3/src/directorsync_v3/core/: __init__.py  applier.py  config.py  director_client.py  importer.py  inventories.py  job_monitor.py  logging_setup.py  profiles.py
DirectorSyncV3/test/: test_config_minimal.py
DirectorSyncV3/tests/: test_applier_crud.py  test_cli_apply.py  test_config_files_env.py  test_config_minimal.py  test_director_client.py  test_generic_importer.py  test_importer_resolve_hooks.py  test_inventories_http.py  test_job_monitor.py  test_logging_setup.py  test_profiles_loader.py
hooks-importer/: hook-lp_tenant_importer_v2.py
lp_tenant_exporter_v2/: .env.example  .gitignore  collector_majority_mapping.md  requirements.txt  tenant_collectors_summary.md
lp_tenant_importer/: .gitignore  all_raw.txt  main.py  text  (+6 more)
(+185 files in other folders)
